Fixed scroll on firefox.

--- a/style.css
+++ b/style.css
@@ -23,9 +23,20 @@ h3 {
   color: #fff;
   left: 4%;
   font-size: 3.5rem;
-  margin-top: 5%;
+  margin-top: 20%;
 }
 
+.move-down {
+  margin-bottom: -15%
+}
+
+#about-header {
+  margin-top: -17%;
+}
+
+.mobile {
+  display: none;
+}
 #header-box {
   margin-top: 12vh;
   margin-left: 5%;
@@ -37,8 +48,17 @@ h3 {
   margin-top: 3px;
 }
 
-#about, #works {
-  margin-top: -5px;
+#about{
+  margin-top: -7px;
+}
+#works {
+  margin-top: -6px;
+}
+#skills, #resume, #contact {
+  margin-top: -2px;
+}
+#menu-close:focus {
+  outline: none;
 }
 
 #first-top-triangle {
@@ -131,7 +151,11 @@ ul {
   list-style-type: none;
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
-  padding-left: 0px;
+  padding-right: 10px;
+}
+
+#menu ul {
+  text-align: right;
 }
 
 .skills-column {
@@ -157,10 +181,6 @@ ul {
   margin-top: 3px;
 }
 
-.mobile-triangle {
-  display: none;
-}
-
 .triangle-desktop-bottom, .triangle-mobile-bottom  {
   margin-top: 5%;
 }
@@ -172,7 +192,7 @@ ul {
 }
 
 .portfolio-box {
-  margin: 2% 1%;
+  margin: 10px 1%;
   position: relative;
 }
 
@@ -424,7 +444,8 @@ nav {
 #menu-close {
   font-size: 2rem;
   color: #fff;
-  padding: 15px 15px 0px;
+  padding-left: 150px;
+  padding-top: 15px;
   cursor: pointer;
 }
 
@@ -444,13 +465,19 @@ nav {
 }
 
 #menu li {
-  padding: 15px 20px;
+  padding: 15px 35px;
+  margin-left: -40px;
+  margin-right: -20px;
   color: white;
   cursor: pointer;
 }
 
 #menu li:hover {
   background-color: #dde0e4;
+}
+
+#contact-triangle {
+  margin-top: -5px;
 }
 
 @media screen and (max-width: 1020px) {
@@ -463,6 +490,7 @@ nav {
   h3 {
     font-size: 2.5rem;
     left: 9%;
+    margin-top: 23%;
   }
   #bio-text{
     font-size: 1rem;
@@ -473,27 +501,16 @@ nav {
   #triangle-box {
     display: none;
   }
-  .desktop-triangle {
-    display: none;
-  }
-  .mobile-triangle {
-    display: block;
-  }
+
   #mobile-triangle-box {
     display: block;
     margin-top: 10%;
     margin-bottom: -1px;
   }
-  .triangle-mobile-bottom {
+  .mobile {
     display: block;
   }
-  .triangle-mobile-top {
-    display: block;
-  }
-  .triangle-desktop-bottom {
-    display: none;
-  }
-  .triangle-desktop-top {
+  .desktop {
     display: none;
   }
   .modal-top img {
@@ -536,6 +553,13 @@ nav {
   .link-box {
     margin-top: 10px;
   }
+  #bio {
+    margin-bottom: 10px;
+  }
+  .triangle-mobile-top {
+    margin-top: -1px;
+    margin-left: -1px;
+  }
 }
 
 @media screen and (max-width: 769px) {
@@ -557,11 +581,20 @@ nav {
 }
 
 @media screen and (max-width: 550px) {
+  nav {
+    right: 15px;
+  }
+  #hamburger {
+    padding: 8px 12px;
+    border-radius: 8px;
+  }
   h1 {
     font-size: 4.3em;
+    font-weight: 600;
   }
   h2 {
     font-size: 1.5em;
+    font-weight: 600;
   }
   h3 {
     font-size: 1.5em;
@@ -616,5 +649,14 @@ nav {
   }
   nav {
     top: 20px;
+  }
+  .modal-top img {
+    max-height: 25vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #first-mobile-triangle {
+    margin-top: -2px;
+    margin-left: -2px;
   }
 }
